--- a/Ejercicio_clase2_git.ipynb
+++ b/Ejercicio_clase2_git.ipynb
@@ -137,7 +137,7 @@
    "outputs": [],
    "source": [
     "# 4 - ejercicio 4\n",
-    "# Nombre"
+    "# Osckar Valenzuela Cervantes"
    ]
   },
   {
@@ -417,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
